Java 11 branch implementation